--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -24,17 +24,17 @@
                 <nav>
                     <span>Howdy, {{ user.username }}!</span>
                     <a href="{% url 'logout' %}">LOGOUT</a>
-                    <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="{% url 'cart' %}" class="fa-solid fa-cart-shopping"></a>
                 </nav>
                 {% else %}
                 <nav><a href="{% url 'login' %}">LOGIN</a> or
                     <a href="{% url 'accounts:signup' %}">SIGN UP</a>
-                    <a href="#" class="fa-solid fa-cart-shopping"></a>
+                    <a href="{% url 'cart' %}" class="fa-solid fa-cart-shopping"></a>
                 </nav>
                 {% endif %}
                 
             </nav>
-            <h1>STICKER FELLAS</h1>
+            <a href="{% url 'home' %}"><h1 @click="goHome">STICKER FELLAS</h1></a>
             <div class="headerwaves">
                 <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                     <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
@@ -45,13 +45,13 @@
         </header>
 
         <nav class="contents browsebar">
-            SHOP ALL | STICKERS | PINS | HATS 
+            <div @click="openShop">SHOP ALL</div> | STICKERS | PINS | HATS 
         </nav>
 
         <main class="contents">
 
             {% block content %}
-            <article class="homepage">
+            <article class="homepage" :class="{'fullmenu':showHome}">
                 <!-- Main Page display TODO: classbind-->
                 <section class="primary-banner">
                     MAIN SALE PROMO THING!!!! STICKERS!!!!!!!!
@@ -63,8 +63,15 @@
                 </section>
             </article>
                 
-            <article class="shopping">
+            <article class="shopping" :class="{'fullmenu':showShop}">
                 <!-- Shopping for items TODO: classbind -->
+                <section class="shop-all">
+                    <div v-for="item in inventory" class="listings" href="#">
+                        <h3>[[item.name]]</h3>
+                        <img :src="item.image"/>
+                    </div>
+                </section>
+                SHOPPEN
             </article>
             {% endblock %}
         </main>
