--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -24,6 +24,11 @@ h1 {
     -webkit-text-stroke: 1px var(--header-text);
 }
 
+h3 {
+    margin: 0 0 0.3em 0;
+    font-family: 'Darumadrop One', cursive;
+}
+
 a {
     text-decoration: none;
     color: var(--header-text);
@@ -85,6 +90,28 @@ header {
     padding: 0.6em;
 }
 
+.primary-banner {
+    /* TODO */
+    background-color: var(--header-text);
+    height: 300px;
+    margin-bottom: 1em;
+}
+
+.secondary-banners {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
+}
+
+.secondary-ad {
+    width: 200px;
+    height: 300px;
+    border-radius: 10px;
+
+    background-color: var(--header-text);
+}
+
 .shop-all {
     display: flex;
     flex-wrap: wrap;
@@ -100,6 +127,26 @@ header {
     height: 180px;
 }
 
+.inner-listing {
+    text-align: center;
+}
+
+.itempreview {
+    width: 150px;
+    height: 150px;
+}
+
 footer {
     font-size: 8pt;
+}
+
+/* Tablet Display */
+@media screen and (min-width: 680px) {
+
+    .secondary-banners {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: unset;
+        justify-content: space-around;
+    }
 }
