--- a/stickerfellas/templates/listing.html
+++ b/stickerfellas/templates/listing.html
@@ -1,9 +1,8 @@
 {% extends 'index.html' %}
-
 {% block title %}ITEM TO BUY CHANGE THIS{% endblock %}
 
 {% block content %}
     <div>
-        PRODUCT FOR SALE :)
+        SINGLE PAGE LISTING
     </div>
 {% endblock %}
