--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -70,7 +70,10 @@
                     :listing="item" :key="item.id">
                     </item-listings>
                 </section>
-                SHOPPEN
+                
+                In yr cart:
+
+                [[shoppingCart]]
             </article>
             {% endblock %}
         </main>
