--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -66,7 +66,7 @@
             <article class="shopping" :class="{'fullmenu':showShop}">
                 <!-- Shopping for items TODO: classbind -->
                 <section class="shop-all">
-                    <item-listings v-for="item in inventory" class="listings" href="#"
+                    <item-listings v-for="item in inventory" class="listings"
                     :listing="item" :key="item.id">
                     </item-listings>
                 </section>
