--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -74,7 +74,7 @@ header {
     fill: var(--background);
 }
 
-.homepage, .shopping {
+.homepage, .shopping, .shopping-cart {
     display: none;
 }
 
@@ -125,6 +125,7 @@ header {
     padding: 0.6em;
     width: 200px;
     height: 180px;
+    cursor: pointer;
 }
 
 .inner-listing {
@@ -134,6 +135,21 @@ header {
 .itempreview {
     width: 150px;
     height: 150px;
+}
+
+.single-item {
+    text-align: center;
+
+    background-color: var(--background);
+    border: 3px solid var(--accent);
+    border-radius: 10px;
+    margin: 1.3em;
+    padding: 0.6em;
+}
+
+.price {
+    font-weight: 700;
+    font-size: 10pt;
 }
 
 footer {
