--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="{% static 'js/secrets.js' %}"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=AUhMRIxcUxDngr22YGQyKHLdYJ5ehSS3EkJzipZD3x2rMRgsMam9GGgbvkZjnvMMj7f0LplIIzehiHFj"></script>
     <script src="{% static 'js/app.js' %}" defer></script>
     
     <title>{% block title %}STICKER FELLAS - Stickers and More!{% endblock %}</title>
@@ -24,17 +26,17 @@
                 <nav>
                     <span>Howdy, {{ user.username }}!</span>
                     <a href="{% url 'logout' %}">LOGOUT</a>
-                    <a href="{% url 'cart' %}" class="fa-solid fa-cart-shopping"></a>
+                    <a @click="openCart" class="fa-solid fa-cart-shopping"></a>
                 </nav>
                 {% else %}
                 <nav><a href="{% url 'login' %}">LOGIN</a> or
                     <a href="{% url 'accounts:signup' %}">SIGN UP</a>
-                    <a href="{% url 'cart' %}" class="fa-solid fa-cart-shopping"></a>
+                    <a @click="openCart" class="fa-solid fa-cart-shopping"></a>
                 </nav>
                 {% endif %}
                 
             </nav>
-            <a href="{% url 'home' %}"><h1 @click="goHome">STICKER FELLAS</h1></a>
+            <h1 @click="goHome">STICKER FELLAS</h1>
             <div class="headerwaves">
                 <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                     <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
@@ -45,7 +47,10 @@
         </header>
 
         <nav class="contents browsebar">
-            <div @click="openShop">SHOP ALL</div> | STICKERS | PINS | HATS 
+            <div @click="openShop(null)">SHOP ALL</div>
+            <div @click="openShop('S')">STICKERS</div>
+            <div @click="openShop('P')">PINS</div>
+            <div @click="openShop('H')">HATS</div> 
         </nav>
 
         <main class="contents">
@@ -62,15 +67,36 @@
                     <div id="small-ad-3" class="secondary-ad">ARTIST SPOTLIGHT</div>
                 </section>
             </article>
+
+            <article class="shopping-cart" :class="{'fullmenu':showCart}">
+                <!-- TODO: refine view of cart -->
+                Your cart :
+                <shopping-cart :cart="shoppingCart"></shopping-cart>
+            </article>
                 
             <article class="shopping" :class="{'fullmenu':showShop}">
-                <!-- Shopping for items TODO: classbind -->
                 <section class="shop-all">
-                    <item-listings v-for="item in inventory" class="listings" href="#"
+                    <item-listings v-if="inventory.length > 0" v-for="item in inventory" class="listings"
                     :listing="item" :key="item.id">
                     </item-listings>
+                    <div v-if="inventory.length === 0">
+                        Nothing here yet! Check back later. ☺
+                    </div>
                 </section>
-                SHOPPEN
+            </article>
+
+            <article class="shopping" :class="{'fullmenu':showProduct}">
+                <section class="single-item">
+                    <h1>[[activeProduct.name]]</h1>
+                    <img :src="activeProduct.image" alt="image of product"/>
+                    <div class="price">[[activeProduct.price]]</div>
+                    <caption>[[activeProduct.description]]</caption>
+                    <section class="buying">
+                        <label for="quantity">Quantity:</label>
+                        <input type="number" id="quantity" min="1" default="1" v-model="buyingNumber">
+                        <button @click="addToCart(buyingNumber)">Add to Cart</button>
+                    </section>
+                </section>
             </article>
             {% endblock %}
         </main>
