--- a/stickerfellas/templates/order_complete.html
+++ b/stickerfellas/templates/order_complete.html
@@ -4,9 +4,6 @@
 
 {% block content %}
 
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+Thanks for your order!
 
 {% endblock %}
