successfully implement price IDs for stripe payments and checkout

--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -19,6 +19,7 @@
 
 <body>
     <div id="app">
+        {% csrf_token %}
         <header>
             <nav class="accounts">
                 {% if user.is_authenticated %}
@@ -71,20 +72,6 @@
                 <!-- TODO: refine view of cart -->
                 Your cart :
                 <shopping-cart :cart="shoppingCart"></shopping-cart>
-                <form id="payment-form">
-                    <div id="link-authentication-element">
-                        <!--Stripe.js injects the Link Authentication Element-->
-                    </div>
-                    <div id="payment-element">
-                        <!--Stripe.js injects the Payment Element-->
-                    </div>
-                    <button id="submit">
-                        <div class="spinner hidden" id="spinner"></div>
-                        <span id="button-text">Pay now</span>
-                    </button>
-                    <div id="payment-message" class="hidden"></div>
-                </form>
-
                 <button @click="checkout(shoppingCart)">
                     Pay now!
                 </button>
