render conditional completion page with basic details

--- a/stickerfellas/templates/registration/login.html
+++ b/stickerfellas/templates/registration/login.html
@@ -2,6 +2,13 @@
 
 {% block title %}Login{% endblock %}
 
+{% block homedirect %}
+    <h1><a href="{% url 'home' %}" class="homedirect">STICKER FELLAS</a></h1>
+{% endblock %}
+
+{% block navbar %}
+{% endblock %}
+
 {% block content %}
 
 <h2>Log in</h2>
