--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -34,6 +34,11 @@ a {
     color: var(--main-text);
 }
 
+.homedirect {
+    color: var(--background);
+    -webkit-text-stroke: 1px var(--main-text);
+}
+
 body {
     margin: 0;
 }
