--- a/stickerfellas/templates/registration/signup.html
+++ b/stickerfellas/templates/registration/signup.html
@@ -2,6 +2,13 @@
 
 {% block title %}Signup{% endblock %}
 
+{% block homedirect %}
+    <h1><a href="{% url 'home' %}" class="homedirect">STICKER FELLAS</a></h1>
+{% endblock %}
+
+{% block navbar %}
+{% endblock %}
+
 {% block content %}
 
 <h2>Sign up</h2>
