--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -112,10 +112,35 @@ header {
 }
 
 .primary-banner {
-    /* TODO */
-    background-color: var(--header-text);
+    background-image: linear-gradient(45deg, #f1faf8, #8ec0ab);
+    border-top: 2px solid var(--header-text);
+    border-bottom: 2px solid var(--header-text);
     height: 300px;
     margin-bottom: 1em;
+    text-align: center;
+    display: grid;
+    grid-template-areas: 
+        'header'
+        'promo'
+        'ad-text';
+
+    cursor: pointer;
+}
+
+.primary-header {
+    grid-area: header;
+    font-size: 26pt;
+}
+
+.primary-banner-promo {
+    width: 200px;
+    grid-area: promo;
+    margin: auto;
+}
+
+.primary-block {
+    grid-area: ad-text;
+    background-color: var(--accent);
 }
 
 .secondary-banners {
@@ -177,6 +202,16 @@ input[type=number] {
     width: 3em;
 }
 
+.order-details {
+    word-wrap: break-word;
+    text-align: center;
+}
+
+.order-details ul {
+    list-style-type: none;
+    padding: 0;
+}
+
 footer {
     font-size: 8pt;
 }
@@ -184,10 +219,48 @@ footer {
 /* Tablet Display */
 @media screen and (min-width: 680px) {
 
+    .primary-banner {
+    grid-template-areas: 
+        'promo header'
+        'ad-text ad-text';
+    }
+
+    .primary-header {
+        font-size: 30pt;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .primary-banner-promo {
+        width: 250px;
+    }
+
     .secondary-banners {
         flex-direction: row;
         flex-wrap: wrap;
         align-items: unset;
         justify-content: space-around;
+    }
+}
+
+@media screen and (min-width: 1100px) {
+
+    .primary-banner {
+        grid-template-rows: 250px 50px;
+    }
+
+    .primary-header {
+        font-size: 42pt;
+    }
+
+    .primary-banner-promo {
+        z-index: 2;
+        width: 300px;
+    }
+
+    .primary-block {
+        text-align: right;
+        padding-right: 2em;
     }
 }
