--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -68,9 +68,18 @@
                     <div class="primary-block">Animal designs and more with our die-cut stickers!</div>
                 </section>
                 <section class="secondary-banners">
-                    <div id="small-ad-1" class="secondary-ad">FUNNY HATS</div>
-                    <div id="small-ad-2" class="secondary-ad">AMAZING PINS</div>
-                    <div id="small-ad-3" class="secondary-ad">ARTIST SPOTLIGHT</div>
+                    <div id="small-ad-1" class="secondary-ad" @click="openShop('H')">
+                        <h3>FUNNY HATS</h3>
+                        <img src="{% static 'ad/ad_hat.png' %}" alt="hat promo image" class="secondary-banner-promo">
+                    </div>
+                    <div id="small-ad-2" class="secondary-ad" @click="openShop('P')">
+                        <img src="{% static 'ad/ad_pin.png' %}" alt="pin promo image" class="secondary-banner-promo">
+                        <h3>AMAZING PINS</h3>
+                    </div>
+                    <div id="small-ad-3" class="secondary-ad">
+
+                        <h3>SPOTLIGHT</h3>
+                    </div>
                 </section>
             </article>
 
