--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -88,7 +88,7 @@
                 Your cart :
                 <shopping-cart :cart="shoppingCart"></shopping-cart>
                 <button @click="checkout(shoppingCart)">
-                    Pay now!
+                    Proceed to Checkout!
                 </button>
 
             </article>
