local storage holds cart and clears on checkout completion page loading

--- a/stickerfellas/templates/order_complete.html
+++ b/stickerfellas/templates/order_complete.html
@@ -20,5 +20,7 @@
         </ul>
 
         A copy of this confirmation has been sent to {{ info.customer_details.email }}
+    
+        <checkout-complete></checkout-complete>
     </div>
 {% endblock %}
