--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -76,9 +76,8 @@
                         <img src="{% static 'ad/ad_pin.png' %}" alt="pin promo image" class="secondary-banner-promo">
                         <h3>AMAZING PINS</h3>
                     </div>
-                    <div id="small-ad-3" class="secondary-ad">
-
-                        <h3>SPOTLIGHT</h3>
+                    <div id="small-ad-3" class="secondary-ad" @click="openShop('lowstock')">
+                        <h3>LOW STOCK ALERT</h3>
                     </div>
                 </section>
             </article>
@@ -106,6 +105,7 @@
 
             <article class="shopping" :class="{'fullmenu':showProduct}">
                 <section class="single-item">
+                    <i class="fa-solid fa-xmark close-active" @click="openShop(lastFilter)"></i>
                     <h1>[[activeProduct.name]]</h1>
                     <img :src="activeProduct.image" alt="image of product"/>
                     <div class="price">[[activeProduct.price]]</div>
