--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -229,6 +229,23 @@ button {
     text-align: center;
 }
 
+.out {
+    filter: grayscale(80%);
+}
+
+.stock-notice {
+    filter: saturate(300%) brightness(90%);
+    position: absolute;
+    top: 80px;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+
+    background-color: var(--accent);
+    font-weight: 900;
+    line-height: 4em;
+}
+
 .itempreview {
     width: 150px;
     height: 150px;
