--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -76,15 +76,13 @@
                         <img src="{% static 'ad/ad_pin.png' %}" alt="pin promo image" class="secondary-banner-promo">
                         <h3>AMAZING PINS</h3>
                     </div>
-                    <div id="small-ad-3" class="secondary-ad">
-
-                        <h3>SPOTLIGHT</h3>
+                    <div id="small-ad-3" class="secondary-ad" @click="openShop('lowstock')">
+                        <h3>LOW STOCK ALERT</h3>
                     </div>
                 </section>
             </article>
 
             <article class="shopping-cart" :class="{'fullmenu':showCart}">
-                <!-- TODO: refine view of cart -->
                 Your cart :
                 <shopping-cart :cart="shoppingCart"></shopping-cart>
                 <button @click="checkout(shoppingCart)">
@@ -106,15 +104,18 @@
 
             <article class="shopping" :class="{'fullmenu':showProduct}">
                 <section class="single-item">
+                    <i class="fa-solid fa-xmark close-active" @click="openShop(lastFilter)"></i>
                     <h1>[[activeProduct.name]]</h1>
                     <img :src="activeProduct.image" alt="image of product"/>
                     <div class="price">[[activeProduct.price]]</div>
                     <caption>[[activeProduct.description]]</caption>
+                    <div class="price">[[activeProduct.inventory]] in Stock!</div>
                     <section class="buying">
                         <label for="quantity">Quantity:</label>
-                        <input type="number" id="quantity" min="1" default="1" v-model="buyingNumber">
+                        <input type="number" id="quantity" min="1" default="1" :max="activeProduct.inventory" v-model="buyingNumber">
                         <button @click="addToCart(buyingNumber)">Add to Cart</button>
                     </section>
+                    <div v-if="stockError">All stock of this product is claimed in a cart.</div>
                 </section>
             </article>
             {% endblock %}
