add direct link to product on detail page that goes directly to clipboard

--- a/stickerfellas/templates/404.html
+++ b/stickerfellas/templates/404.html
@@ -14,5 +14,6 @@
 {% block content %}
     <div class="error-page">
         <h2><i class="fa-solid fa-triangle-exclamation"></i> 404 <i class="fa-solid fa-triangle-exclamation"></i></h2>
+        <p>The page you've tried to reach does not exist! Sorry!</p>
     </div>
 {% endblock %}
