--- a/stickerfellas/templates/registration/signup.html
+++ b/stickerfellas/templates/registration/signup.html
@@ -6,6 +6,8 @@
     <h1><a href="{% url 'home' %}" class="homedirect">STICKER FELLAS</a></h1>
 {% endblock %}
 
+{% block cart %}
+{% endblock %}
 {% block navbar %}
 {% endblock %}
 
